apollo-router/src/query_planner/snapshots/apollo_router__query_planner__bridge_query_planner__tests__impl-17.snap
---
source: apollo-router/src/query_planner/bridge_query_planner.rs
expression: "subselections_keys(\"query Q($d1:Boolean!) { me {\n            username\n            name {\n                ... @defer { first }\n                ... @defer(if: $d1) { last }\n            }\n        }}\").await"
---
 { me { username name { last } } }
 { me { username } }
/me/name { first }
/me/name { last }
