apollo-router/src/query_planner/snapshots/apollo_router__query_planner__bridge_query_planner__tests__impl-19.snap
---
source: apollo-router/src/query_planner/bridge_query_planner.rs
expression: "subselections_keys(\"query Q { topProducts {\n            name\n            ... on Book {\n                isbn\n                ... @defer {\n                    similarBooks {\n                        isbn\n                    }\n                }\n            }\n        }}\").await"
---
 { topProducts { ... on Book { name isbn } ... on Furniture { name } } }
/topProducts/... on Book { similarBooks { isbn } }
